# iot-avr

./: CMakeLists.txt  README.md  generic-gcc-avr.cmake
libs/: CMakeLists.txt
scripts/: build.bat  make.bat  vs2019tools.bat
src/: main.cpp
